profile picture overflow fix

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -28,6 +28,7 @@ body,
 #root,
 .app {
   min-height: 100%;
+  overflow-x: hidden;
 }
 
 body,
